--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,7 +12,9 @@
     "bootstrap": "^5.3.2",
     "classnames": "^2.3.2",
     "react": "^18.2.0",
+    "react-data-table-component": "^7.5.4",
     "react-dom": "^18.2.0",
+    "react-feather": "^2.0.10",
     "react-google-autocomplete": "^2.7.3",
     "react-hook-form": "^7.48.2",
     "react-redux": "^8.1.3",
