--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,8 +11,10 @@
     "axios": "^1.6.2",
     "bootstrap": "^5.3.2",
     "classnames": "^2.3.2",
+    "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-data-table-component": "^7.5.4",
+    "react-datepicker": "^4.23.0",
     "react-dom": "^18.2.0",
     "react-feather": "^2.0.10",
     "react-google-autocomplete": "^2.7.3",
@@ -23,6 +25,9 @@
     "react-select": "^5.8.0",
     "react-toastify": "^9.1.3",
     "reactstrap": "^9.2.1",
+    "recharts": "^2.10.1",
+    "socket.io-client": "^4.7.2",
+    "styled-components": "^6.1.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
